--- a/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
+++ b/install/extras/developers/css/cerb.css/layout/cerb-styles.scss
@@ -1612,6 +1612,7 @@ UL.cerb-popupmenu {
 
 	IMG {
 		max-width: 100%;
+		height: auto;
 	}
 }
 
@@ -1736,6 +1737,7 @@ DIV.emailBodyHtml {
 
 	IMG {
 		max-width: 100%;
+		height: auto;
 	}
 
 	DIV.block {
@@ -1803,6 +1805,7 @@ DIV.emailBodyHtmlLight {
 
 	IMG {
 		max-width: 100%;
+		height: auto;
 	}
 
 	DIV.block {
@@ -1892,6 +1895,7 @@ DIV.commentBodyHtml {
 
 	IMG {
 		max-width: 100%;
+		height: auto;
 	}
 
 	OL, UL {
